antlr/punto1/Punto1SQLParser.py
# Generated from Punto1/Punto1SQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Punto1SQLParser ( Parser ):

    grammarFileName = "Punto1SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "','", "')'", "'*'", "'='", 
                     "'CREATE'", "'TABLE'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'SELECT'", "'FROM'", "'UPDATE'", "'SET'", "'DELETE'", 
                     "'WHERE'", "'INT'", "'STRING'", "'BOOL'", "'AND'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CREATE", "TABLE", 
                      "INSERT", "INTO", "VALUES", "SELECT", "FROM", "UPDATE", 
                      "SET", "DELETE", "WHERE", "INT", "STRING", "BOOL", 
                      "AND", "ID", "INTLIT", "STRINGLIT", "BOOLLIT", "WS", 
                      "COMMENT" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_createStmt = 2
    RULE_colDef = 3
    RULE_type = 4
    RULE_insertStmt = 5
    RULE_selectStmt = 6
    RULE_selectList = 7
    RULE_updateStmt = 8
    RULE_assignList = 9
    RULE_assign = 10
    RULE_deleteStmt = 11
    RULE_whereClause = 12
    RULE_idList = 13
    RULE_literalList = 14
    RULE_expr = 15
    RULE_literal = 16

    ruleNames =  [ "program", "stmt", "createStmt", "colDef", "type", "insertStmt", 
                   "selectStmt", "selectList", "updateStmt", "assignList", 
                   "assign", "deleteStmt", "whereClause", "idList", "literalList", 
                   "expr", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    CREATE=7
    TABLE=8
    INSERT=9
    INTO=10
    VALUES=11
    SELECT=12
    FROM=13
    UPDATE=14
    SET=15
    DELETE=16
    WHERE=17
    INT=18
    STRING=19
    BOOL=20
    AND=21
    ID=22
    INTLIT=23
    STRINGLIT=24
    BOOLLIT=25
    WS=26
    COMMENT=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Punto1SQLParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Punto1SQLParser.StmtContext)
            else:
                return self.getTypedRuleContext(Punto1SQLParser.StmtContext,i)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Punto1SQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 86656) != 0):
                self.state = 34
                self.stmt()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(Punto1SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InsertStmtLineContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Punto1SQLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def insertStmt(self):
            return self.getTypedRuleContext(Punto1SQLParser.InsertStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmtLine" ):
                listener.enterInsertStmtLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmtLine" ):
                listener.exitInsertStmtLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStmtLine" ):
                return visitor.visitInsertStmtLine(self)
            else:
                return visitor.visitChildren(self)


    class UpdateStmtLineContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Punto1SQLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def updateStmt(self):
            return self.getTypedRuleContext(Punto1SQLParser.UpdateStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmtLine" ):
                listener.enterUpdateStmtLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmtLine" ):
                listener.exitUpdateStmtLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStmtLine" ):
                return visitor.visitUpdateStmtLine(self)
            else:
                return visitor.visitChildren(self)


    class SelectStmtLineContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Punto1SQLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def selectStmt(self):
            return self.getTypedRuleContext(Punto1SQLParser.SelectStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmtLine" ):
                listener.enterSelectStmtLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmtLine" ):
                listener.exitSelectStmtLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmtLine" ):
                return visitor.visitSelectStmtLine(self)
            else:
                return visitor.visitChildren(self)


    class CreateStmtLineContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Punto1SQLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def createStmt(self):
            return self.getTypedRuleContext(Punto1SQLParser.CreateStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmtLine" ):
                listener.enterCreateStmtLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmtLine" ):
                listener.exitCreateStmtLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateStmtLine" ):
                return visitor.visitCreateStmtLine(self)
            else:
                return visitor.visitChildren(self)


    class DeleteStmtLineContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Punto1SQLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def deleteStmt(self):
            return self.getTypedRuleContext(Punto1SQLParser.DeleteStmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStmtLine" ):
                listener.enterDeleteStmtLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStmtLine" ):
                listener.exitDeleteStmtLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStmtLine" ):
                return visitor.visitDeleteStmtLine(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = Punto1SQLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = Punto1SQLParser.CreateStmtLineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.createStmt()
                self.state = 43
                self.match(Punto1SQLParser.T__0)
                pass
            elif token in [9]:
                localctx = Punto1SQLParser.InsertStmtLineContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.insertStmt()
                self.state = 46
                self.match(Punto1SQLParser.T__0)
                pass
            elif token in [12]:
                localctx = Punto1SQLParser.SelectStmtLineContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.selectStmt()
                self.state = 49
                self.match(Punto1SQLParser.T__0)
                pass
            elif token in [14]:
                localctx = Punto1SQLParser.UpdateStmtLineContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.updateStmt()
                self.state = 52
                self.match(Punto1SQLParser.T__0)
                pass
            elif token in [16]:
                localctx = Punto1SQLParser.DeleteStmtLineContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.deleteStmt()
                self.state = 55
                self.match(Punto1SQLParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(Punto1SQLParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(Punto1SQLParser.TABLE, 0)

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def colDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Punto1SQLParser.ColDefContext)
            else:
                return self.getTypedRuleContext(Punto1SQLParser.ColDefContext,i)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_createStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmt" ):
                listener.enterCreateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmt" ):
                listener.exitCreateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateStmt" ):
                return visitor.visitCreateStmt(self)
            else:
                return visitor.visitChildren(self)




    def createStmt(self):

        localctx = Punto1SQLParser.CreateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(Punto1SQLParser.CREATE)
            self.state = 60
            self.match(Punto1SQLParser.TABLE)
            self.state = 61
            self.match(Punto1SQLParser.ID)
            self.state = 62
            self.match(Punto1SQLParser.T__1)
            self.state = 63
            self.colDef()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 64
                self.match(Punto1SQLParser.T__2)
                self.state = 65
                self.colDef()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(Punto1SQLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(Punto1SQLParser.TypeContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_colDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColDef" ):
                listener.enterColDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColDef" ):
                listener.exitColDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColDef" ):
                return visitor.visitColDef(self)
            else:
                return visitor.visitChildren(self)




    def colDef(self):

        localctx = Punto1SQLParser.ColDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_colDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(Punto1SQLParser.ID)
            self.state = 74
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Punto1SQLParser.INT, 0)

        def STRING(self):
            return self.getToken(Punto1SQLParser.STRING, 0)

        def BOOL(self):
            return self.getToken(Punto1SQLParser.BOOL, 0)

        def getRuleIndex(self):
            return Punto1SQLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = Punto1SQLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1835008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(Punto1SQLParser.INSERT, 0)

        def INTO(self):
            return self.getToken(Punto1SQLParser.INTO, 0)

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def idList(self):
            return self.getTypedRuleContext(Punto1SQLParser.IdListContext,0)


        def VALUES(self):
            return self.getToken(Punto1SQLParser.VALUES, 0)

        def literalList(self):
            return self.getTypedRuleContext(Punto1SQLParser.LiteralListContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsertStmt" ):
                return visitor.visitInsertStmt(self)
            else:
                return visitor.visitChildren(self)




    def insertStmt(self):

        localctx = Punto1SQLParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_insertStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Punto1SQLParser.INSERT)
            self.state = 79
            self.match(Punto1SQLParser.INTO)
            self.state = 80
            self.match(Punto1SQLParser.ID)
            self.state = 81
            self.match(Punto1SQLParser.T__1)
            self.state = 82
            self.idList()
            self.state = 83
            self.match(Punto1SQLParser.T__3)
            self.state = 84
            self.match(Punto1SQLParser.VALUES)
            self.state = 85
            self.match(Punto1SQLParser.T__1)
            self.state = 86
            self.literalList()
            self.state = 87
            self.match(Punto1SQLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(Punto1SQLParser.SELECT, 0)

        def selectList(self):
            return self.getTypedRuleContext(Punto1SQLParser.SelectListContext,0)


        def FROM(self):
            return self.getToken(Punto1SQLParser.FROM, 0)

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def whereClause(self):
            return self.getTypedRuleContext(Punto1SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_selectStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmt" ):
                listener.enterSelectStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmt" ):
                listener.exitSelectStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmt" ):
                return visitor.visitSelectStmt(self)
            else:
                return visitor.visitChildren(self)




    def selectStmt(self):

        localctx = Punto1SQLParser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(Punto1SQLParser.SELECT)
            self.state = 90
            self.selectList()
            self.state = 91
            self.match(Punto1SQLParser.FROM)
            self.state = 92
            self.match(Punto1SQLParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 93
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(Punto1SQLParser.IdListContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_selectList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectList" ):
                listener.enterSelectList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectList" ):
                listener.exitSelectList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectList" ):
                return visitor.visitSelectList(self)
            else:
                return visitor.visitChildren(self)




    def selectList(self):

        localctx = Punto1SQLParser.SelectListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectList)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(Punto1SQLParser.T__4)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.idList()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(Punto1SQLParser.UPDATE, 0)

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def SET(self):
            return self.getToken(Punto1SQLParser.SET, 0)

        def assignList(self):
            return self.getTypedRuleContext(Punto1SQLParser.AssignListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(Punto1SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_updateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmt" ):
                listener.enterUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmt" ):
                listener.exitUpdateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStmt" ):
                return visitor.visitUpdateStmt(self)
            else:
                return visitor.visitChildren(self)




    def updateStmt(self):

        localctx = Punto1SQLParser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_updateStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(Punto1SQLParser.UPDATE)
            self.state = 101
            self.match(Punto1SQLParser.ID)
            self.state = 102
            self.match(Punto1SQLParser.SET)
            self.state = 103
            self.assignList()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 104
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Punto1SQLParser.AssignContext)
            else:
                return self.getTypedRuleContext(Punto1SQLParser.AssignContext,i)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_assignList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignList" ):
                listener.enterAssignList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignList" ):
                listener.exitAssignList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignList" ):
                return visitor.visitAssignList(self)
            else:
                return visitor.visitChildren(self)




    def assignList(self):

        localctx = Punto1SQLParser.AssignListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.assign()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 108
                self.match(Punto1SQLParser.T__2)
                self.state = 109
                self.assign()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(Punto1SQLParser.LiteralContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = Punto1SQLParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(Punto1SQLParser.ID)
            self.state = 116
            self.match(Punto1SQLParser.T__5)
            self.state = 117
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(Punto1SQLParser.DELETE, 0)

        def FROM(self):
            return self.getToken(Punto1SQLParser.FROM, 0)

        def ID(self):
            return self.getToken(Punto1SQLParser.ID, 0)

        def whereClause(self):
            return self.getTypedRuleContext(Punto1SQLParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_deleteStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteStmt" ):
                listener.enterDeleteStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteStmt" ):
                listener.exitDeleteStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeleteStmt" ):
                return visitor.visitDeleteStmt(self)
            else:
                return visitor.visitChildren(self)




    def deleteStmt(self):

        localctx = Punto1SQLParser.DeleteStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_deleteStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(Punto1SQLParser.DELETE)
            self.state = 120
            self.match(Punto1SQLParser.FROM)
            self.state = 121
            self.match(Punto1SQLParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 122
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(Punto1SQLParser.WHERE, 0)

        def expr(self):
            return self.getTypedRuleContext(Punto1SQLParser.ExprContext,0)


        def getRuleIndex(self):
            return Punto1SQLParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = Punto1SQLParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(Punto1SQLParser.WHERE)
            self.state = 126
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Punto1SQLParser.ID)
            else:
                return self.getToken(Punto1SQLParser.ID, i)

        def getRuleIndex(self):
            return Punto1SQLParser.RULE_idList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdList" ):
                listener.enterIdList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdList" ):
                listener.exitIdList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):
